fix : submit button

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         
 
         <div class="social">
-<!-- 
+
+            <!-- 
             <div class="facebook"><a href="https://www.facebook.com/SaylaniMassITTraining" target="_blank" rel="noreferrer"><img src="./img/facelog.png" alt="error"></a></div>
 
             <div><a href="https://www.instagram.com/saylanimassittraining" target="_blank" rel="noreferrer"><img src="./img/intalogo.jpg" alt="error"></a></div>
@@ -142,7 +143,7 @@
 </div>
 
 <div class="submit">
-    <button class="Submit-btn"> Submit </button>
+    <a href="https://www.youtube.com/@SaylaniMassITTraining"><button class="Submit-btn"> Submit </button></a>
 </div>
     
 
